UP-4419:  Fixed issue with collapsing sidebar and containing div height

--- a/uportal-war/src/main/webapp/media/skins/respondr/common/less/portlet.less
+++ b/uportal-war/src/main/webapp/media/skins/respondr/common/less/portlet.less
@@ -117,6 +117,7 @@
 
         .navbar-collapse {
             padding: 0;
+            max-height: 100%;  // Else it will get cut off if the list grows enough
 
             .list-group {
                 margin-bottom: 0;
